# bridge

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  devenv.nix
crates/bridge/: Cargo.toml
crates/bridge/src/: bridge.rs  main.rs
crates/bridge/src/bridge/: app_menus.rs
crates/cli/: Cargo.toml
crates/collection/: Cargo.toml
crates/collection/src/: collection.rs
crates/http/: Cargo.toml
crates/http_client/: Cargo.toml  LICENSE-MIT
crates/http_client/src/: client.rs  error.rs  handler.rs  info.rs  lib.rs  request.rs  response.rs  text.rs
crates/http_client/src/agent/: selector.rs
crates/http_client/src/config/: mod.rs
crates/http_client/src/cookies/: jar.rs  mod.rs
crates/http_client/src/interceptor/: mod.rs
crates/http_ui/: Cargo.toml
crates/http_ui/src/: http_editor.rs  http_ui.rs
crates/settings/: Cargo.toml
crates/settings/src/: settings.rs  settings_content.rs  settings_store.rs
crates/theme/: Cargo.toml
crates/theme/src/: colors.rs  scales.rs  theme.rs
crates/ui/: Cargo.toml
crates/ui/src/: components.rs  placement.rs  traits.rs  ui.rs
crates/ui/src/components/: button.rs  root.rs
crates/ui/src/traits/: styled_ext.rs
crates/util/: Cargo.toml
crates/util/src/: util.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: area.rs  dock.rs  item.rs  pane.rs  pane_group.rs  workspace.rs
