[workspace]
resolver = "2"
members = [
    "crates/*"
]
default-members = ["crates/bridge"]

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]

#
# Workspace member crates
#

workspace = { path = "crates/workspace" }

#
# External crates
#

anyhow = "1.0.100"
uuid = "1.18.1"

gpui = { version = "*", features = ["runtime_shaders"] }
