[workspace]
resolver = "2"
members = [
    "crates/*"
]
default-members = ["crates/bridge"]

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]

#
# Workspace member crates
#

util = { path = "crates/util" }
workspace = { path = "crates/workspace" }
collection = { path = "crates/collection" }
theme = { path = "crates/theme" }
ui = { path = "crates/ui" }

#
# External crates
#

parking_lot = "0.12"
anyhow = "1.0.100"
uuid = "1.18.1"
rust-embed = "8.8.0"
derive_more = { version = "2.0.1", features = ["full"] }
config = { version = "0.15.18", default-features = false, features = ["async", "json5", "convert-case"] }
serde = { version = "1.0.228", features = ["derive"] }

gpui = { version = "*", features = ["runtime_shaders"] }
gpui-macros = { version = "*" }
