[workspace]
resolver = "2"
members = [
    "crates/*"
]
default-members = ["crates/bridge"]

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]

#
# Workspace member crates
#

util = { path = "crates/util" }
workspace = { path = "crates/workspace" }
collection = { path = "crates/collection" }
theme = { path = "crates/theme" }
ui = { path = "crates/ui" }
settings = { path = "crates/settings" }
http_ui = { path = "crates/http_ui" }
http_client = { path = "crates/http_client" }

#
# External crates
#

parking_lot = "0.12"
anyhow = "1.0.100"
uuid = "1.18.1"
rust-embed = "8.8.0"
async-trait = "0.1.89"
futures-lite = "2.6.1"
bytes = "1.10.1"
http = "1.3.1"
async-channel = "2.5.0"
curl = { version = "0.4.49", features = ["http2", "static-curl", "static-ssl"] }
curl-sys = "0.4.83"
crossbeam-utils = "0.8.21"
polling = "3.11.0"
slab = "0.4.11"
url = "2.5.7"
sluice = "0.6.0"
event-listener = "5.4.1"
waker-fn = "1.2.0"
castaway = "0.2.4"
httpdate = "1.0.3"
encoding_rs = "0.8.35"
mime = "0.3.17"
derive_more = { version = "2.0.1", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
smallvec = "1.15.1"
config = { version = "0.15.18", default-features = false, features = ["async", "json5", "convert-case"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

gpui = { version = "*", features = ["runtime_shaders"] }
gpui-macros = { version = "*" }
