[package]
name = "http_client"
version = "2.0.0"
authors = ["Stephen M. Coakley <me@stephencoakley.com>", "Marco Mihai Condrache <52580954+marcocondrache@users.noreply.github.com>"]
license = "MIT"
keywords = ["http", "request", "client", "async", "curl"]
readme = "README.md"
edition = "2024"

[dependencies]
log = "0.4"
castaway.workspace = true
waker-fn.workspace = true
event-listener.workspace = true
sluice.workspace = true
url.workspace = true
slab.workspace = true
polling.workspace = true
crossbeam-utils.workspace = true
curl.workspace = true
curl-sys.workspace = true
async-channel.workspace = true
http.workspace = true
futures-lite.workspace = true
openssl.workspace = true
httpdate.workspace = true
mime.workspace = true
encoding_rs.workspace = true
serde.workspace = true
serde_json.workspace = true

tracing = { version = "0.1.17", features = ["log"] }
tracing-futures = { version = "0.2", default-features = false, features = ["std", "std-future"] }

[dev-dependencies]
env_logger = "0.9"
flate2 = "1.0.3"
indicatif = "0.15"
rayon = "1"
static_assertions = "1.1"
structopt = "0.3"
tempfile = "3.1"
test-case = "2.0"
tracing-subscriber = ">=0.2.12, <0.4.0"
serde_json = "1"
